neuralbank/templates/connectivity-link.yaml
---
# ------------------------------------------------------------
# 2. HTTPRoute (Enrutamiento para Frontend y Backend)
# ------------------------------------------------------------
# Esta ruta utiliza el Gateway definido arriba y enruta el tráfico
# a los servicios internos.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuralbank-front-back-route
  namespace: neuralbank-project # Namespace donde residen tus servicios
spec:
  parentRefs:
    - name: neuralbank-gateway
      namespace: istio-system # Referencia al Gateway en el namespace de Istio
  
  hostnames:
    - "neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com" # Cambia esto por tu dominio real

  rules:
    # ------------------------------------------------------------
    # A. Rutas de API y Swagger (BACKEND)
    # ------------------------------------------------------------
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /swagger-ui
        - path:
            type: PathPrefix
            value: /q
      backendRefs:
        - name: neuralbank-backend-svc
          port: 8080

    # ------------------------------------------------------------
    # B. Ruta por Defecto (FRONTEND)
    # ------------------------------------------------------------
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: neuralbank-frontend-svc
          port: 8080
